--- a/eCommerceUI.Tests/eCommerceUI.Tests.csproj
+++ b/eCommerceUI.Tests/eCommerceUI.Tests.csproj
@@ -96,5 +96,13 @@
   <ItemGroup>
     <Folder Include="TestCases\BehaviourDriven\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="chromedriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="geckodriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
